--- a/main_gusto/templates/index.html
+++ b/main_gusto/templates/index.html
@@ -1,23 +1,115 @@
 {%  extends 'base.html' %}
 {% block content %}
-    <section>
-        <div class="container">
-            <div class="row">
-                <h1>saldkad</h1>
-                {% for items in categories %}
-                    <div class="col-xs-12">
-                        <h2>{{ items.title }}</h2>
+    <div class="container body-content">
+        <section id="banners">
+      <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+
+    <div class="carousel-item active">
+      <img src="https://www.avtobanket.ru/upload/image_gallery/3805/800x_86cc329d72240cb7dfa3a5d0aba54fb2.jpg" class="d-block w-100" alt="">
+    </div>
+      {% for item in banners %}
+    <div class="carousel-item">
+      <img src={{ item.photo.url }} class="d-block w-100" alt="">
+    </div>
+      {% endfor %}
+<button class="carousel-control-prev" style="opacity: .1" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="false"></span>
+    <span class="visually-hidden">Попередня</span>
+  </button>
+  <button class="carousel-control-next" style="opacity: .1" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="false"></span>
+    <span class="visually-hidden">Наступна</span>
+  </button>
+  </div>
+  </div>
+    </section>
+     <section id="special_menu">
+        <div class="container body-content">
+                <h1 style="margin: 50px 0px">Mеню от шефа</h1>
+                <div class="row">
+                {% for items in special_categories %}
                         {% for dish in items.dishes %}
-                            <div>
-                                <div><h3>{{ dish.title }}</h3></div>
-                                <div><p>{{ dish.description }}</p></div>
-                                <div><p>{{ dish.price }} $</p></div>
-                                <div><img src="{{ dish.photo.url }}"></img></div>
-                            </div>
+                                <div class="col-4">
+                                    <div class="row">
+                                        <div class="col-6"><h3><a href="/menu/{{ dish.pk }}">{{ dish.title }}</a></h3></div>
+                                        <div class="col-6"><h3 align="right" >{{ dish.price }} $</h3></div>
+                                        <div class="col-12"><img src="{{ dish.photo.url }}" class="img-thumbnail"></img></div>
+                                        <div class="col-12"><h3 class="text-muted">{{ dish.description }}</h3></div>
+                                    </div>
+                                </div>
                             {% endfor %}
-                    </div>
                 {% endfor %}
             </div>
         </div>
     </section>
+    <section id="menu">
+        <div class="container body-content">
+                <h1 style="margin: 50px 0px">Меню</h1>
+                <div class="row">
+                {% for items in categories %}
+                     <h2 style="margin-bottom: 30px" class="display-5">{{ items.title }}</h2>
+                        {% for dish in items.dishes %}
+                                <div class="col-4">
+                                    <div class="row">
+                                        <div class="col-6"><h3><a href="/menu/{{ dish.pk }}">{{ dish.title }}</a></h3></div>
+                                        <div class="col-6"><h3 align="right" >{{ dish.price }} $</h3></div>
+                                        <div class="col-12"><img src="{{ dish.photo.url }}" class="img-thumbnail"></img></div>
+                                        <div class="col-12"><h3 class="text-muted">{{ dish.description }}</h3></div>
+                                    </div>
+                                </div>
+                            {% endfor %}
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+    <section id="events">
+        <div class="container body-content">
+                <h1 style="margin: 50px 0px">События</h1>
+                <div class="row">
+                {% for item in events %}
+                                <div class="col-6">
+                                    <h2 style="margin-bottom: 30px" class="display-5">{{ item.title }}</h2>
+                                    <div class="row">
+                                        <div class="col-12"><img src="{{ item.photo.url }}" class="img-thumbnail"></img></div>
+                                        <div class="col-12"><h3 class="text-muted">{{ dish.description }}</h3></div>
+                                        <div class="col-3"><h3 >Дата: </h3></div>
+                                        <div class="col-9"><h3 align="right" >{{ item.event_date }}</h3> </div>
+                                        {% if item.price == 0 %}
+                                            <div class="col-3"><h3>Стоимость:</h3></div>
+                                            <div class="col-9"><h3 align="right" >Бесплатно</h3></div>
+                                        {% else %}
+                                            <div class="col-3"><h3>Стоимость:</h3></div>
+                                            <div class="col-9"><h3 align="right" >{{ item.price }} $</h3></div>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            {% endfor %}
+            </div>
+        </div>
+    </section>
+    <section id="reservation">
+    <div class="container">
+    <div style="background: #cccccc; margin-top: 50px; padding: 50px">
+        <h3>Відправте нам ваше повідомлення</h3>
+            <form name="sendMessage" id="contactForm" novalidate action="" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-md-6">
+                        {{ form.user_name }}
+                    </div>
+                    <div class="col-md-6">
+                        {{ form.user_email }}
+                    </div>
+                </div>
+                <div style="margin-top: 10px" class="row">
+                    <div class="col-md-12">
+                        {{ form.message }}
+                        <button type="submit" class="btn btn-custom btn-lg">Відправити повідомлення</button>
+                    </div>
+                </div>
+
+            </form></div>
+    </div>
+</section>
 {% endblock %}
